--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -6,15 +6,16 @@
     android:layout_height="match_parent"
     tools:context=".MainActivity">
 
+
     <androidx.fragment.app.FragmentContainerView
         android:id="@+id/fragment"
         android:name="androidx.navigation.fragment.NavHostFragment"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:layout_above="@+id/bott_nav"
+        android:layout_marginBottom="1dp"
         app:defaultNavHost="true"
         app:navGraph="@navigation/nav_graph" />
-
 
     <com.google.android.material.bottomnavigation.BottomNavigationView
 
