--- a/app/src/main/res/layout/fragment_today.xml
+++ b/app/src/main/res/layout/fragment_today.xml
@@ -49,8 +49,7 @@
             android:layout_height="match_parent"
             android:layout_gravity="center"
             android:fontFamily="@font/comfortaa_bold"
-            android:padding="3dp"
-            android:text="Beirut, Lebanon" />
+            android:padding="3dp" />
     </LinearLayout>
 
     <LinearLayout
@@ -65,10 +64,9 @@
 
         <ImageView
             android:id="@+id/Icon"
-            android:layout_width="70dp"
+            android:layout_width="66dp"
             android:layout_height="70dp"
-            android:layout_gravity="center_horizontal"
-            app:srcCompat="@drawable/weathericon" />
+            android:layout_gravity="center_horizontal" />
     </LinearLayout>
 
     <LinearLayout
@@ -105,7 +103,6 @@
             android:layout_height="match_parent"
             android:layout_gravity="center"
             android:fontFamily="@font/comfortaa"
-            android:text="11°C"
             android:textSize="50dp" />
     </LinearLayout>
 
@@ -429,12 +426,6 @@
 
 
     </LinearLayout>
-
-    <TextView
-        android:id="@+id/textView"
-        android:layout_width="232dp"
-        android:layout_height="119dp"
-        android:text="TextView" />
 
 
 </RelativeLayout>
