--- a/app/src/main/res/layout/daily_item.xml
+++ b/app/src/main/res/layout/daily_item.xml
@@ -3,7 +3,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content"
+    android:layout_height="80dp"
     android:background="@drawable/rounded_searchbar"
     android:orientation="horizontal"
     android:padding="10dp"
@@ -11,7 +11,7 @@
 
     <TextView
         android:id="@+id/txtDate"
-        android:layout_width="0dp"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="center"
         android:layout_weight="1"
@@ -23,8 +23,9 @@
 
     <ImageView
         android:id="@+id/imgIcon"
-        android:layout_width="0dp"
-        android:layout_height="40dp"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="center"
         android:layout_weight="1"
         android:fontFamily="sans-serif-light"
         android:gravity="center"
@@ -33,9 +34,9 @@
 
     <TextView
         android:id="@+id/txtHighTemperature"
-        android:layout_width="0dp"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_weight="0.5"
+        android:layout_weight="1"
         android:fontFamily="@font/comfortaa_bold"
         android:gravity="end"
         android:layout_gravity="center"
@@ -49,6 +50,7 @@
         android:layout_height="wrap_content"
         android:fontFamily="@font/comfortaa_bold"
         android:gravity="end"
+        android:layout_weight="1"
         android:layout_gravity="center"
         android:textColor="@color/black"
         android:textSize="14sp"
