--- a/app/src/main/res/menu/bottom_nav.xml
+++ b/app/src/main/res/menu/bottom_nav.xml
@@ -10,7 +10,7 @@
         android:icon="@drawable/calendar7"
         android:title="@string/forecast" />
     <item
-        android:id="@+id/mapsFragment"
+        android:id="@+id/GoogleMapsFragment"
         android:icon="@drawable/maps"
         android:title="@string/maps" />
 
