--- a/app/src/main/res/navigation/nav_graph.xml
+++ b/app/src/main/res/navigation/nav_graph.xml
@@ -16,8 +16,8 @@
         android:label="fragment_forecast"
         tools:layout="@layout/fragment_forecast" />
     <fragment
-        android:id="@+id/mapsFragment"
-        android:name="com.example.weatherapplication.fragments.MapsFragment"
-        android:label="fragment_maps"
-        tools:layout="@layout/fragment_maps" />
+        android:id="@+id/GoogleMapsFragment"
+        android:name="com.example.weatherapplication.fragments.GoogleMapsFragment"
+        android:label="fragment_google_maps"
+        tools:layout="@layout/fragment_google_maps" />
 </navigation>
