Added 3 hours forecast (working but have UI problems)

--- a/app/src/main/res/layout/fragment_forecast.xml
+++ b/app/src/main/res/layout/fragment_forecast.xml
@@ -38,7 +38,7 @@
         android:gravity="center_horizontal|center_vertical">
 
         <androidx.recyclerview.widget.RecyclerView
-            android:id="@+id/recyclerview"
+            android:id="@+id/recyclerviewDays"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             tools:listitem="@layout/daily_item" />
