--- a/app/src/main/res/layout/fragment_today.xml
+++ b/app/src/main/res/layout/fragment_today.xml
@@ -6,6 +6,9 @@
     android:layout_height="match_parent"
     tools:context=".fragments.TodayFragment">
 
+
+
+
     <ScrollView
         android:layout_width="match_parent"
         android:layout_height="match_parent">
@@ -94,6 +97,7 @@
                     android:gravity="center_horizontal|center_vertical"
                     android:orientation="horizontal"
                     android:padding="5dp">
+
 
                     <ImageView
                         android:id="@+id/Icon"
@@ -494,18 +498,19 @@
 
                 <LinearLayout
                     android:id="@+id/rl10"
-                    android:layout_below="@+id/rl9"
                     android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
+                    android:layout_height="match_parent"
+                    android:layout_below="@+id/rl9"
                     android:orientation="horizontal">
 
                     <androidx.recyclerview.widget.RecyclerView
                         android:id="@+id/recyclerviewHours"
-                        android:orientation="horizontal"
                         android:layout_width="match_parent"
                         android:layout_height="match_parent"
+                        android:orientation="horizontal"
                         app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                         tools:listitem="@layout/hourly_item" />
+
 
 
                 </LinearLayout>
