--- a/app/src/main/res/navigation/nav_graph.xml
+++ b/app/src/main/res/navigation/nav_graph.xml
@@ -20,4 +20,9 @@
         android:name="com.example.weatherapplication.fragments.GoogleMapsFragment"
         android:label="fragment_google_maps"
         tools:layout="@layout/fragment_google_maps" />
+    <fragment
+        android:id="@+id/cameraFragment"
+        android:name="com.example.weatherapplication.fragments.CameraFragment"
+        android:label="fragment_camera"
+        tools:layout="@layout/fragment_camera" />
 </navigation>
