--- a/app/src/main/res/layout/fragment_camera.xml
+++ b/app/src/main/res/layout/fragment_camera.xml
@@ -8,55 +8,65 @@
 
     <!-- TODO: Update blank fragment layout -->
 
-    <LinearLayout
-        android:id="@+id/rl1"
+    <ScrollView
         android:layout_width="match_parent"
-        android:layout_height="500dp"
-        android:layout_margin="20dp"
-        android:background="@drawable/rounded_searchbar"
-        android:gravity="center_horizontal|center_vertical">
+        android:layout_height="match_parent">
 
-        <ImageView
-            android:id="@+id/image"
+        <RelativeLayout
+            android:id="@+id/wrapper"
             android:layout_width="match_parent"
-            android:layout_height="400dp"
-            tools:ignore="ImageContrastCheck"
-            tools:srcCompat="@tools:sample/avatars" />
-    </LinearLayout>
+            android:layout_height="wrap_content">
 
-    <LinearLayout
-        android:id="@+id/rl2"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_below="@+id/rl1"
-        android:padding="20dp">
+            <LinearLayout
+                android:id="@+id/rl1"
+                android:layout_width="match_parent"
+                android:layout_height="500dp"
+                android:layout_margin="20dp"
+                android:background="@drawable/rounded_searchbar"
+                android:gravity="center_horizontal|center_vertical">
 
-        <Button
-            android:id="@+id/capture"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_margin="20dp"
-            android:layout_weight="0.5"
-            android:backgroundTint="#74BCE3"
-            android:text="@string/capture"
-            android:textAllCaps="false"
-            app:cornerRadius="10dp"
-            app:icon="@android:drawable/ic_menu_camera" />
+                <ImageView
+                    android:id="@+id/image"
+                    android:layout_width="match_parent"
+                    android:layout_height="400dp"
+                    tools:ignore="ImageContrastCheck"
+                    tools:srcCompat="@tools:sample/avatars" />
+            </LinearLayout>
 
-        <Button
-            android:id="@+id/upload"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_margin="20dp"
-            android:layout_weight="0.5"
-            android:backgroundTint="#74BCE3"
-            android:text="@string/upload"
-            android:textAllCaps="false"
-            app:cornerRadius="10dp"
-            app:icon="@android:drawable/ic_menu_upload" />
+            <LinearLayout
+                android:id="@+id/rl2"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_below="@+id/rl1"
+                android:padding="20dp">
 
+                <Button
+                    android:id="@+id/capture"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_margin="10dp"
+                    android:layout_weight="0.5"
+                    android:backgroundTint="#74BCE3"
+                    android:text="@string/capture"
+                    android:textAllCaps="false"
+                    app:cornerRadius="10dp"
+                    app:icon="@android:drawable/ic_menu_camera" />
 
-    </LinearLayout>
+                <Button
+                    android:id="@+id/upload"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_margin="10dp"
+                    android:layout_weight="0.5"
+                    android:backgroundTint="#74BCE3"
+                    android:text="@string/upload"
+                    android:textAllCaps="false"
+                    app:cornerRadius="10dp"
+                    app:icon="@android:drawable/ic_menu_upload" />
+            </LinearLayout>
+
+        </RelativeLayout>
+    </ScrollView>
 
 
 </RelativeLayout>
